@@ -6,6 +6,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public class GitUtilities {
@@ -76,16 +78,16 @@ public class GitUtilities {
 	 */
 	protected static String getURLWithNoUserInfo(final String url, final String urlSource) {
 		try {
-			URL newUrl = new URL(url);
+			URL newUrl = URI.create(url).toURL();
             if (newUrl.getUserInfo() != null) {
 				System.out.println("Info @ Removing user info from GIT URL. Source: " + urlSource);
-				return new URL(newUrl.getProtocol(), newUrl.getHost(), newUrl.getPort(), newUrl.getFile()).toString();
+				return new URI(newUrl.getProtocol(), null, newUrl.getHost(), newUrl.getPort(), newUrl.getPath(), newUrl.getQuery(), null).toURL().toString();
 			}
 			return url;
-		} catch (MalformedURLException e) {
+		} catch (MalformedURLException | URISyntaxException | IllegalArgumentException e ) {
 			System.out.println("Warning @ Git URL is not a valid URl. Source: " + urlSource);
 			return null;
 		}
-	}
+    }
 
 }
